[gd_scene load_steps=6 format=3 uid="uid://djk7f32chtpsi"]

[ext_resource type="Script" uid="uid://cpkxj5d5gvgm5" path="res://weapons/tether/movement_controller_tethered/movement_controller_tethered.gd" id="1_j3lts"]
[ext_resource type="Script" uid="uid://cnfr7v75ouaag" path="res://classes/state/state_machine.gd" id="2_hvy1o"]
[ext_resource type="Script" uid="uid://dt2v2scf1un6y" path="res://weapons/tether/movement_controller_tethered/movement_states/tethered_air_state.gd" id="3_j3lts"]
[ext_resource type="Script" uid="uid://dkqwg3jxywjne" path="res://weapons/tether/movement_controller_tethered/movement_states/tethered_idle_state.gd" id="4_s0rs6"]
[ext_resource type="Script" uid="uid://dsgryl1tb2qy3" path="res://weapons/tether/movement_controller_tethered/movement_states/tethered_walk_state.gd" id="5_u1nhb"]

[node name="Movement_Controller_Tethered" type="Node"]
script = ExtResource("1_j3lts")
metadata/_custom_type_script = "uid://cpkxj5d5gvgm5"

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_hvy1o")
current_state = NodePath("Tethered_Idle_State")
metadata/_custom_type_script = "uid://cnfr7v75ouaag"

[node name="Tethered_Air_State" type="Node" parent="State_Machine"]
script = ExtResource("3_j3lts")
metadata/_custom_type_script = "uid://dt2v2scf1un6y"

[node name="Tethered_Idle_State" type="Node" parent="State_Machine"]
script = ExtResource("4_s0rs6")
metadata/_custom_type_script = "uid://dkqwg3jxywjne"

[node name="Tethered_Walk_State" type="Node" parent="State_Machine"]
script = ExtResource("5_u1nhb")
metadata/_custom_type_script = "uid://dsgryl1tb2qy3"
